# tiny-git-helper

./: .gitignore  Cargo.toml  README.md  app.js  package-lock.json  package.json  tsconfig.json
.devcontainer/: Dockerfile  copy-config.sh  devcontainer.json
.github/workflows/: build_binaries.yml  release_binaries.yml
scripts/: install.ps1  install.sh
src/: app.ts  clone.ts  color.ts  commit.ts  help.ts  init.ts  installer.rs  main.rs  settings.ts
src/config/: config.rs  defines.rs  git.rs  github.rs  mod.rs  update.rs  utils.rs
src/functions/: commit.rs  mod.rs
src/modules/: branch.ts  clone.rs  clone.ts  color.ts  commit.rs  commit.ts  diff.rs  help.rs  history.rs  init.ts  mod.rs  settings.ts  version.ts
src/modules/clone/: functions.rs  views.rs
src/modules/commit/: functions.rs  views.rs
src/modules/commit/views/: help.rs
src/modules/diff/: functions.rs  views.rs
src/modules/history/: functions.rs  views.rs
src/utils/: BranchName.ts  Color.ts  CommitMessage.ts  InteruptedPrompt.ts  Spinner.ts  input.rs  mod.rs  out.rs
src/view/: input.rs  mod.rs  spinner.rs
src/views/: commit.rs  help.rs  mod.rs
