[package]
name = "tiny-git-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
crossterm = "0.27.0"
home = "0.5.5"
inquire = "0.6.2"
regex = "1.10.2"
reqwest = {version="0.11.22", features = ["json"]}
serde = {version="1.0.192", features = ["derive"]}
serde_json = "1.0.108"
spinners = "4.1.1"
tokio = { version = "1.34.0", features = ["full"] }
